# phyllosoma

./: 00reservedWords.html  CMakeLists.txt  LICENSE.txt  README.md  api.c  api.h  autocomplete.c  autocomplete.h  class.c  class.txt  cmpdata.c  compiler.c  compiler.h  config.cmake  config.h  core1.c  core1.h  debug.c  debug.h  display.c  display.h  editor.c  editor.h  editor_ntsc.c  error.c  exception.c  file.c  float.c  functions.c  globalvars.c  help-e.txt  help.c  help.txt  hexfile.c  integer.c  io.c  io.h  kmbasic.c  library.c  main.c  (+21 more)
PicoCalc/: MACHIKAP.INI  README.md  readme-e.txt  readme.txt
RP2350LCD147/: MACHIKAP.INI  README.md  readme-e.txt  readme.txt
RP2350LCD2/: MACHIKAP.INI  README.md  readme-e.txt  readme.txt
ResTouch/: MACHIKAP.INI  README.md  readme-e.txt  readme.txt
auxcode/: auxcode.c  auxcode.cmake
config/: README.md  pico_ili9341.h  pico_ili9488.h  pico_ntsc.h  pico_picocalc.h  pico_restouch.h  pico_st7789.h  pico_w_ili9341.h  pico_w_ili9488.h  pico_w_ntsc.h  pico_w_picocalc.h  pico_w_restouch.h  pico_w_st7789.h  pico_w_ws_pico_restouch.h  rp2350_lcd_1_47.h  rp2350_lcd_2.h  ws_pico_restouch.h  xiao_embed.h  xiao_ntsc.h
documents/: README.md  age-e.txt  age.txt  class-e.txt  class.txt  cpuclock-e.txt  cpuclock.txt  embed-e.txt  embed.txt  gamepad-e.txt  gamepad.txt  help-e.txt  help-k.txt  help.txt  keyboard-e.txt  keyboard.txt  pcconnect-e.txt  pcconnect.txt  readme-e.txt  readme-pu-e.txt  readme-pu.txt  readme.txt  readme2-e.txt  readme2.txt  readmeLib-e.txt  readmeLib.txt  sprintf.html  strftime.html  wifi-e.txt  wifi.txt
interface/: LCDdriver.h  README.md  buttons.h  ffconf.h  fileselect.c  fontdata.c  graphlib.c  graphlib.h  graphlib_lcd.c  graphlib_ntsc.c  hid_virtual_keytable.c  ili9341_spi.c  ili9488_spi.c  keyinput.c  keyinput.h  pico-sdmm.c  picocalc_keyboard.c  rp2040_pwm_ntsc_textgraph.c  rp2040_pwm_ntsc_textgraph.h  rp2350_lcd_1_47.c  rp2350_lcd_2.c  st7789_spi.c  tusb_config.h  usbkeyboard.c  usbkeyboard.h  videodriver.h  ws_pico_restouch.c
pcconnect/: README.md  connect.c  connect.ini
samples/: 3DWAVE.BAS  BLOCK.BAS  BTNTEST.BAS  FILEMAN.BAS  HDEAMON.BAS  INVADE.BAS  LCHIKA.BAS  MANDELBR.BAS  MAZE3D.BAS  MOZART.BAS  MUSIC.BAS  NIHONGO.BAS  PCG.BAS  PEGSOL-G.BAS  PHOTO.BAS  POLYGON.BAS  RAYTRACE.BAS  SOUND.BAS  STARTREK.BAS  TIME-INT.BAS  WEATHER.BAS  WFRAME.BAS
scripts/: MACHIKAP.INI  README.md  build_all.php  check_config.php  compare_dis.php  convert.php  convert_kb.php  disassembler.php  embed_ssid_passwd.php  embed_ssid_passwd_kb.php  globalvars.php  help-k.php  memdump.php  reservedWords.html  reserved_names.php
wifi/: lwipopts.h  lwipopts_examples_common.h  mbedtls_config.h  memmap_machikania.ld  picow_ntp_client.c  picow_tcp_client.c  picow_tcp_server.c  picow_tls_client.c  socket.c  wifi.h  wifierror.c  withoutwifi.c  withwifi.c
